add dep loopring-sdk

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lintfix": "prettier --write --list-different ."
   },
   "dependencies": {
+    "@loopring-web/loopring-sdk": "^2.0.14",
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/pwa": "^3.3.5",
     "core-js": "^3.19.3",
